[package]
name = "web-headers"
version = "0.1.0"
authors = ["Sajjad Taghinezhad <Sajjad.Taqinezhad@Gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper="0.13.4"
tokio = { version = "0.2", features = ["full"] }
